# timedial

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
ansible/: ansible.cfg  inventory.yaml
ansible/playbooks/: deploy.yaml  full.yaml
ansible/roles/docker/tasks/: main.yaml
ansible/roles/fail2ban/files/: jail.local
ansible/roles/fail2ban/files/action.d/: iptables-multiport-docker.conf
ansible/roles/fail2ban/files/filter.d/: timedial.conf
ansible/roles/fail2ban/tasks/: main.yaml
ansible/roles/pkg_upgrades/tasks/: main.yaml
ansible/roles/timedial/files/: keys  ssh_host_ecdsa_key  ssh_host_ecdsa_key.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
ansible/roles/timedial/tasks/: main.yaml
files/: issue.net  menu.yaml  sshd_config  startup.sh  telnet  telnet-login.sh
files/etc/: environment  mailutils.conf  prelogin_banner
files/etc/pam.d/: login  sshd
files/etc/postfix/: main.cf
files/etc/security/: limits.conf
files/etc/ssh/: sshd_config
files/etc/xinetd.d/: telnet
files/opt/games/zork/: zork.z5
files/opt/simh/: build.sh  expected-emulators
files/opt/simh/pdp11-bsd211/: login-info.txt  pdp11.ini
files/opt/simh/vax8600-vms71/: login-info.txt
files/opt/simulators/: build.sh
files/opt/simulators/altairbasic35/: altairz80.ini  simulator.toml
files/opt/simulators/altairz80/: altairz80.ini  simulator.toml
files/opt/simulators/dgnova-rdos75/: nova.ini  simulator.toml
files/opt/simulators/pdp11-bsd211/: simulator.toml
files/opt/simulators/pdp11-v7unix/: pdp11.ini  simulator.toml
files/opt/simulators/vax8600-vms71/: simulator.toml
files/opt/timedial/: menu.yaml
files/pam.d/: login  sshd
files/simh/: build.sh  run.sh
files/simh/pdp11-bsd211/: start
files/simh/vax8600-vms71/: start  vax8600.ini
keys/host-keys/: README.md
keys/private-keys/: README.md
pam.d/: login  sshd
sidecars/backup/: Dockerfile  entrypoint.sh  known_hosts
sidecars/ftp/: Dockerfile
sidecars/ftp/files/etc/: vsftpd.conf
sidecars/ftp/files/etc/pam.d/: vsftpd
sidecars/imap/: Dockerfile
sidecars/imap/files/etc/dovecot/conf.d/: 10-auth.conf  10-mail.conf  10-ssl.conf
sidecars/mail/: Dockerfile
sidecars/mail/files/etc/: aliases
sidecars/mail/files/etc/dovecot/conf.d/: 10-auth.conf  10-logging.conf  10-master.conf  10-ssl.conf
sidecars/mail/files/etc/pam.d/: dovecot
sidecars/mail/files/etc/postfix/: main.cf  master.cf  transport
sidecars/simh-builder/: Dockerfile  entrypoint.sh
sidecars/slowproxy/: Dockerfile  slow_proxy.py
sidecars/webaccount/: Dockerfile  login.py  mail_bp.py  requirements.txt  settings.py  site.py
sidecars/webaccount/templates/: base.html  login.html
sidecars/website/: Dockerfile  entrypoint.sh  timedial.conf  timedial_http.conf  timedial_https.conf
sidecars/website/html/: README.md  index.html  simulators.html
sidecars/website/src/: base.html  generate.py
sidecars/website/src/content/: ftp.md  index.md  mail.md  simulators.md
ssh_host_keys/: README.md
timedial/: __init__.py  __main__.py  config.py  logger.py  login.py  slow_proxy.py
timedial/accounts/: account.py  create_user.py  create_user_daemon.py  get_pub_keys.py  pam_module.py  session_reaper.py  shell_update.py  stale_files.py  welcome_user.py
timedial/interface/: __init__.py  banner.py  config.py  cursed.py  cursed_interface.py  initial_menu.py  menu.py  menu_data.py  simulators.py
timedial/other/: __init__.py  ascii_player.py  slow_proxy.py  start_sim.py  stats_exporter.py  vt100_player.py
