[project]
name = "timedial"
version = "0.0.1"
description = "Go back in time using your Terminal"
authors = [{ name = "Martin", email = "martin@timedial.org" }]

dependencies = [
    "watchdog==6.0.0",
    "pydantic==2.11.5",
    "ruamel.yaml==0.18.11",
    "bcrypt==4.3.0",
    "requests==2.32.3",
]

[project.scripts]
timedial-auth-create-user = "timedial.accounts.create_user:create_user"
timedial-auth-create-user-daemon = "timedial.accounts.create_user_daemon:create_user_daemon"
timedial-auth-pam-module = "timedial.accounts.pam_module:pam_module"
timedial-auth-get-pub-keys = "timedial.accounts.get_pub_keys:main"
timedial-login = "timedial.login:main"
timedial-start-sim = "timedial.other.start_sim:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff==0.11.11",
    "mypy==1.15.0",
    "Markdown==3.8",
    "types-Markdown==3.8.0.20250415",
    "types-requests==2.32.0.20250515",
]
ansible = ["ansible-core==2.18.6"]

[tool.mypy]
strict = true
#ignore_missing_imports = true

[tool.ruff]
line-length = 140
select = [
    "E",   # pycodestyle (errors)
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "N",   # pep8-naming
    "D",   # pydocstyle (docstring style)
    "RUF", # ruff-specific rules
]
[tool.ruff.lint.pydocstyle]
convention = "google"
